@@ -2,6 +2,8 @@
 
 2006-12-05	Konstantin V. Arkhipov
 
+	* main/Flow/EditorController.class.php: pre/post-command hooks added.
+
 	* core/Form/Primitives/: Timestamp' stuff separated from
 	PrimitiveDate; this one breaks BC: you must replace all
 	Primitive::date() calls to Primitive::timestamp().
